--- a/default.cfg
+++ b/default.cfg
@@ -351,6 +351,12 @@ END_EVENT
 #
 #########################
 #
+# Cell Deaths
+#
+
+#
+#########################
+#
 # Reporting
 #
 # Fluid-Medium contact
