Neighbour weighted cell death regime

--- a/default.cfg
+++ b/default.cfg
@@ -353,8 +353,14 @@ END_EVENT
 #
 # Cell Deaths
 #
-
+# Kill primitive endoderm with too many epiblast neighbours
 #
+DEATH_DEFINE,0
+TIME,2
+TYPE,1
+TARGET_TYPE,8
+DATA,7,6,0.20
+END_DEATH
 #########################
 #
 # Reporting
