Added death count report

--- a/default.cfg
+++ b/default.cfg
@@ -523,3 +523,13 @@ REPEAT,1
 DATA,2
 TEXT,FLUIDCOUNT
 END_REPORT
+#
+# Count dead cells
+#
+REPORT_DEFINE,16
+TIME,1
+TYPE,6
+REPEAT,1
+DATA,-1
+TEXT,DEADCOUNT
+END_REPORT
